HRE Event localization adjustments.
Improved the localization for the HRE events.

Co-Authored-By: Smekens <168235727+Smekens20@users.noreply.github.com>

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -15,14 +15,14 @@
  romaioi_tagmata_decision: "Tagmata Primacy"
  romaioi_tagmata_decision_desc: "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the army. They are also among the best-paid soldiers in the empire."
 
- romaioi_damsyria_decision: "Create Exarchate of Syria"
- romaioi_damsyria_decision_desc: "We should reastablish the Exarchate of Syria by replacing the Arab Damascus State."
- romaioi_eastarm_decision: "Expand Armenia"
- romaioi_eastarm_decision_desc: "The lands of "Arevelyan" are rightfully Armenian and should be restored as such."
- romaioi_eastmespotamia_decision: "Create Exarchate of Mespotamia"
- romaioi_eastmespotamia_decision_desc: "The Pronia of Mespotamia is well suited to absord the Assyrian state and as such should be made into a full Exarchate."
- romaioi_expand_taurica_decision: "Expand Taurica"
- romaioi_expand_taurica_decision_desc: "Taurica is well suited to absord the Black Sea Colonies."
+ romaioi_damsyria_decision: "Re-establish the Exarchate of Syria"
+ romaioi_damsyria_decision_desc: "By re-establishing the Exarchate of Syria, we can restore a vital part of our imperial heritage. Replacing the Arab Damascus State with a loyal Exarchate will strengthen our control over the region and reassert Romaion influence in the Levant."
+ romaioi_eastarm_decision: "Expand the Armenian Homeland"
+ romaioi_eastarm_decision_desc: "The lands of Arevelyan have long been a part of the Armenian heartland. It is time to restore these territories to their rightful owners, ensuring the integrity and unity of the Armenian people under our banner."
+ romaioi_eastmespotamia_decision: "Establish the Exarchate of Mesopotamia"
+ romaioi_eastmespotamia_decision_desc: "The Pronia of Mesopotamia is strategically positioned to absorb the Assyrian state. By transforming this region into a full Exarchate, we can secure its stability, integrate its people, and extend our imperial reach in the East."
+ romaioi_expand_taurica_decision: "Expand Taurica into the Black Sea Colonies"
+ romaioi_expand_taurica_decision_desc: "Taurica, with its fertile lands and strategic position, is ideally suited to absorb the Black Sea Colonies. Expanding our influence in the region will solidify our dominance over the Black Sea and enhance our military and trade networks."
 
  notbyz_themata_decision: "Themata Primacy"
  notbyz_themata_decision_desc: "Themata are the main regional military divisions of the Basileía Romaíon, established during the 9th century CE. The Basileía Romaíon is divided into many themata, each with its own governor, military commander and garrison. The main purpose of themata is to provide a means of defense against the empire's enemies. Each thema is responsible for the defense of a specific geographic area and has its own army. The soldiers are mainly local men, who are conscripted and trained for military service. The themata system allows the Basileía Romaíon to have a more flexible military structure, which can adapt to the changing threats and challenges it faces."
@@ -30,8 +30,8 @@
  notbyz_tagmata_decision_desc: "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the  army. They are also among the best-paid soldiers in the empire."
 
 
- remove_noble_privileges_decision: "Remove excessive noble privileges"
- remove_noble_privileges_decision_desc: "Remove excessive noble privileges"
+ remove_noble_privileges_decision: "Abolish Excessive Noble Privileges"
+ remove_noble_privileges_decision_desc: "Reform the power of the nobility by abolishing excessive privileges, ensuring a more equitable society."
  vive_la_revolution_decision: "Vive la Revolution"
  vive_la_revolution_decision_desc: "The French Revolution was a period of radical political and societal change in France that began with the Estates General and ended with the formation of the French Consulate and finally leading to the The First French Empire, Napoleonic France, was the empire ruled by Napoleon Bonaparte, who established French hegemony over much of continental Europe."
 
@@ -48,10 +48,10 @@
  accept_baltic_german_decision: "Accept Baltic"
  accept_baltic_german_decision_desc: "It's time we accept the Baltic and give them the same rights as Primary Cultures."
 
- br_end_slavic_oppression_decision: "End the oppression of the Balkan Slavs"
- br_end_slavic_oppression_decision_desc: "End the oppression of the Balkan Slavs"
- br_end_muslim_oppression_decision: "End the oppression of Muslim Subjects"
- br_end_muslim_oppression_decision_desc: "End the oppression of our Muslim Subjects"
+ br_end_slavic_oppression_decision: "Abolish the Oppression of the Balkan Slavs"
+ br_end_slavic_oppression_decision_desc: "Take a bold step toward justice by ending the systematic oppression of the Balkan Slavs, promoting equality and unity within our realm."
+ br_end_muslim_oppression_decision: "End the Oppression of Our Muslim Subjects"
+ br_end_muslim_oppression_decision_desc: "Erase the injustices faced by our Muslim subjects and establish a fairer, more inclusive society for all people under our rule."
 
  remove_frankish_as_primary_culture_decision: "Remove frankish as primary culture"
  remove_frankish_as_primary_culture_decision_desc: "You face a pivotal decision for the Holy Roman Empire. This decision will set in motion a gradual process of assimilating all regions into French culture, aiming to establish a unified French identity across your domain. While this could strengthen unity and improve administrative control, success is not guaranteed. The transition may be slow, and some areas could resist, with loyalty to the Frankish heritage remaining a potential obstacle."
@@ -74,51 +74,45 @@
  #Moved to relgion localiztion file
 
  #Annex Decisions
- annex_finland: "Integrate Finland"
- annex_finland_desc: "Integrate Finland"
- annex_norway: "Integrate Norway"
- annex_norway_desc: "Integrate Norway"
- annex_UBD: "Integrate Baltics"
- annex_UBD_desc: "Integrate Baltics"
- annex_bedouins: "Integrate Bedouins"
- annex_bedouins_desc: "Integrate Bedouins"
+ annex_finland: "Integrate Finland into the Realm"
+ annex_finland_desc: "Unite Finland with the heart of our empire, strengthening our borders and consolidating power."
+ annex_norway: "Integrate Norway into the Kingdom"
+ annex_norway_desc: "Bring Norway fully under our control, solidifying our northern territories."
+ annex_UBD: "Integrate the Baltic States"
+ annex_UBD_desc: "Extend our direct control over the Baltic region, merging the diverse cultures and peoples into a stronger, unified entity."
+ annex_bedouins: "Integrate the Bedouin Tribes"
+ annex_bedouins_desc: "Bring the Bedouin tribes under our rule, ensuring peace and stability across the desert and securing vital trade routes."
  annex_RIC: "Integrate Etaireía Indía"
- annex_RIC_desc: "Integrate Etaireía Indía"
- annex_DEI: "Integrate Dutch East Indies"
- annex_DEI_desc: "Integrate Dutch East Indies"
- annex_ATC: "Integrate Dutch West Indies"
- annex_ATC_desc: "Integrate Dutch West Indies"
+ annex_RIC_desc: "Fully integrate the Etaireía Indía into our dominion, expanding our control over the Indian Ocean and strengthening our colonial reach."
+ annex_DEI: "Integrate the Dutch East Indies"
+ annex_DEI_desc: "Consolidate control over the Dutch East Indies, bringing its resources and strategic position fully under our control."
+ annex_ATC: "Integrate the Dutch West Indies"
+ annex_ATC_desc: "Incorporate the Dutch West Indies into our empire, securing our colonial holdings in the Caribbean and extending our maritime power."
  annex_JSB: "Integrate Shiberia"
- annex_JSB_desc: "Integrate Shiberia"
+ annex_JSB_desc: "Expand our borders to the east by integrating Shiberia, consolidating control over its vast resources and strategic position."
  annex_JPI: "Integrate Pashifikku"
- annex_JPI_desc: "Integrate Pashifikku"
+ annex_JPI_desc: "Bring the distant territories of Pashifikku under our rule, securing our presence in the Pacific and bolstering our global control."
  annex_NWC: "Integrate Nordhafsveðr"
- annex_NWC_desc: "Integrate Nordhafsveðr"
- annex_russians: "Integrate the Other Russian Princes"
+ annex_NWC_desc: "Extend our authority over Nordhafsveðr, ensuring that our reach spans the northern seas and securing vital trade routes."
  annex_russians_desc: "The Tatars have long trusted us to collect tribute from the other Russian princes on their behalf. We will take advantage of our favorable ties with the tatar court and persuade the Khan to ignore our expansion over the other Russian Princes."
- annex_VAC: "Integrate African colony"
- annex_VAC_desc: "Integrate African colony"
- annex_GAC: "Integrate African colony"
- annex_GAC_desc: "Integrate African colony"
 
 
- remove_cossacks: "Remove Cossack Autonomy"
- remove_cossacks_desc: "Cossacks have been allowed local autonomy, this no longer aligns with our interests."
+ remove_cossacks: "Revoke Cossack Autonomy"
+ remove_cossacks_desc: "For years, the Cossacks have enjoyed local autonomy, but this arrangement no longer serves our central interests. It is time to consolidate control and integrate them fully into the state."
 
- chariot_racing_decision: "State Sponsored Chariot Racing"
- chariot_racing_decision_desc: "Chariot racing stands as one of the most ancient and revered traditions in the Mediterranean's rich historical tapestry. We have the opportunity to breathe new life into this cherished sport, rekindling the very essence of Romaion athletic prowess and entertainment that has endured through the ages."
- expand_chariot_racing_decision: "Expand Chariot Racing"
- expand_chariot_racing_decision_desc: "With chariot racing becoming all the rage in the Empire, there are calls to expand the chariot racing teams to include the six original teams of the Roman Empire."
+ chariot_racing_decision: "State-Sponsored Chariot Racing Revival"
+ chariot_racing_decision_desc: "Chariot racing is one of the most ancient and revered traditions of the Mediterranean world. By reviving this iconic sport, we can restore the grandeur of Romaion athleticism and reconnect with a legacy that stretches back to the heart of our empire’s past."
+ expand_chariot_racing_decision: "Expand the Chariot Racing Circuit"
+ expand_chariot_racing_decision_desc: "As the excitement surrounding chariot racing grows throughout the empire, there is increasing demand to expand the sport by reintroducing the six original teams of the Roman Empire. This will not only fuel public enthusiasm but also honor our historic athletic traditions."
 
- br_mandate_heaven_decision: "Claim Mandate of Heaven"
- br_mandate_heaven_decision_desc: "With control our control of China uncontested its time we claim the Mandate of Heaven for ourselves."
- br_remove_china_political_turmoil_decision: "Peasant Freedoms"
- br_remove_china_political_turmoil_decision_desc: "Peasants now have political and economic freedoms"
- br_remove_china_rampant_corruption_decision: "End Corruption"
- br_remove_china_rampant_corruption_decision_desc: "End Corruption"
- br_remove_insufficient_infrastructure_decision: "Modernize outdated infrastructure"
- br_remove_insufficient_infrastructure_decision_desc: "Modernize outdated infrastructure"
-
+ br_mandate_heaven_decision: "Claim the Mandate of Heaven"
+ br_mandate_heaven_decision_desc: "With our unchallenged control over China, it is time to assert our rightful claim to the Mandate of Heaven, solidifying our rule and divine legitimacy."
+ br_remove_china_political_turmoil_decision: "Grant Peasant Freedoms"
+ br_remove_china_political_turmoil_decision_desc: "The time has come to address the grievances of the peasants. By granting them political and economic freedoms, we can restore stability and foster loyalty among the common people."
+ br_remove_china_rampant_corruption_decision: "Eradicate Corruption"
+ br_remove_china_rampant_corruption_decision_desc: "Corruption has plagued our empire for too long. It is time to root out this malignant force and restore integrity and trust to our government."
+ br_remove_insufficient_infrastructure_decision: "Modernize Outdated Infrastructure"
+ br_remove_insufficient_infrastructure_decision_desc: "Our infrastructure is outdated and hindering progress. It is time to invest in modernization projects to strengthen our economy and improve the daily lives of our people."
 
  br_show_ere_name_decisions: "Show Name Decisions"
  br_show_ere_name_decisions_desc: "Show Name Decisions"
@@ -143,8 +137,8 @@
  ere_rhomania_ii_name_decision_custom_tooltip: "We should use our pronounced transliteration: Rhōmanía"
  
  #Government Decisions
- abolish_feudalism_decision: "Abolish Feudalism"
- abolish_feudalism_decision_desc: "Formaly abolish the practice of feudalism within the state."
+ abolish_feudalism_decision: "Abolish the Feudal System"
+ abolish_feudalism_decision_desc: "Take a decisive step toward modernity by formally abolishing the feudal system, breaking the chains of medieval governance and establishing a more centralized, equitable society."
 
  #AI Only decisions --- These are to boost AI countries and only target other AI countries
  br_byz_easy_agy: "AI Start Scripted War"
