--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -361,87 +361,85 @@
 
  #HRE
  #revolution events
- hre_revolution_events.1.t: "A revolution looms"
+ hre_revolution_events.1.t: "A Revolution looms"
  hre_revolution_events.1.d: "There may be a revolution brewing."
  hre_revolution_events.1.f: "Though our nation has always stood as the beacon of civilization and stability in the Christian parts of West Europe, issues continue to arise. Over time cracks have started to show as our military, economy, and our God given social structure continue to become more and more outdated. Furthermore, our autonomous vassals and colonies have been calling more and more for increased freedoms and even independence! But before we can truly focus outward, we must focus inward. Due to our internal issues, increasing unrest among the so-called Third Estate has put us under increased threat of revolution, and if one happens, we would be unable to truly stop it. In this, we have two possible solutions… We can either embrace some of these would be Revolutionaries ideas and reform our great nation and bring it into this increasingly liberalizing world, by granting freedoms, abolishing serfdom, and replacing our outmoded economic and military structures! Or… We can embrace our own reforms, and suppress these Godless liberals by modernizing our military, centralizing our government around God’s chosen Emperor of the Romans, and bringing our economy to a state of modernized Feudalism! In either of these solutions, we will have some push back among the First and Second Estates, but if we fail, and the patience of the people wanes, our monarchy and our way of life will be drastically and irrevocably altered… Regardless, one of our first possible steps will be to deal with our schism on our national identity in this world where national identity is growing in importance."
  hre_revolution_events.1.a: "We must address it."
 
- hre_revolution_events.2.t: "The Revolution!"
- hre_revolution_events.2.d: "The revolution erupts."
- hre_revolution_events.2.f: "The revolution erupts."
- hre_revolution_events.2.a: "We must address it."
- 
- hre_revolution_events.3.t: "The revolution is prevented."
- hre_revolution_events.3.d: "The revolution is prevented thru reform."
- hre_revolution_events.3.f: "The revolution is prevented thru reform."
- hre_revolution_events.3.a: "Great"
+ hre_revolution_events.2.t: "The Revolution Erupts"
+ hre_revolution_events.2.d: "A wave of unrest sweeps through our lands. The people, emboldened by their desire for change, rise up. The flames of revolution have been lit, and the future of the Empire now hangs in the balance."
+ hre_revolution_events.2.f: "The revolution has ignited. The cries of the people echo through the streets, calling for a new order."
+ hre_revolution_events.2.a: "We stand at the crossroads. We must act decisively."
 
- hre_revolution_events.4.t: "The revolution is suppressed."
- hre_revolution_events.4.d: "The revolution is suppressed."
- hre_revolution_events.4.f: "The revolution is suppressed."
- hre_revolution_events.4.a: "Great"
+ hre_revolution_events.3.t: "The Revolution Prevented"
+ hre_revolution_events.3.d: "Through swift and deliberate reforms, we have managed to quell the revolution before it could spread further. The demands of the people have been heard, and the crisis has been averted—at least for now."
+ hre_revolution_events.3.f: "By addressing the root causes of unrest, we have successfully prevented the revolution. However, the seeds of discontent remain."
+ hre_revolution_events.3.a: "The danger is not over, but we have bought ourselves time to heal the fractures within our realm."
 
- #national identity events
- hre_national_identity_events.1.t: "The question of our national identity."
- hre_national_identity_events.1.d: "We must address the question of our national identity."
- hre_national_identity_events.1.f: "We must address the question of our national identity."
- hre_national_identity_events.1.a: "We must address it."
+ hre_revolution_events.4.t: "The Revolution Suppressed"
+ hre_revolution_events.4.d: "After months of chaos and bloodshed, we have successfully crushed the revolution. The streets are once again calm, but the scars of conflict remain. The cost has been high, but the Empire stands—if only just."
+ hre_revolution_events.4.f: "The revolution has been suppressed, though the cost has been steep. The Empire is fractured, and the road to recovery will be long."
+ hre_revolution_events.4.a: "Victory has come at a price. The Empire will need to rebuild and reconcile in the wake of this struggle."
 
- hre_national_identity_events.3.t: "Our Roman identity."
- hre_national_identity_events.3.d: "We Embraced our “Roman” Identity."
- hre_national_identity_events.3.f: "We Embraced our “Roman” Identity."
- hre_national_identity_events.3.a: "Great"
+ hre_national_identity_events.1.t: "The Question of Our National Identity"
+ hre_national_identity_events.1.d: "Our identity is being questioned. We must confront the evolving nature of our people and define who we truly are as a nation."
+ hre_national_identity_events.1.f: "The question of who we are as a people demands our attention. It is time to make a decisive choice about our future identity."
+ hre_national_identity_events.1.a: "We must confront this challenge and find our true path."
 
- hre_national_identity_events.4.t: "Our French identity."
- hre_national_identity_events.4.d: "We Embraced our “French” Identity."
- hre_national_identity_events.4.f: "We Embraced our “French” Identity."
- hre_national_identity_events.4.a: "Great"
+ hre_national_identity_events.3.t: "Embracing Our Roman Legacy"
+ hre_national_identity_events.3.d: "We have chosen to embrace our Roman heritage, drawing strength from the glorious history that once defined the Empire. This identity shall guide our future."
+ hre_national_identity_events.3.f: "Our Roman identity has been reaffirmed, and we now stand united under the banner of Rome’s legacy."
+ hre_national_identity_events.3.a: "A proud step towards our glorious past and future."
 
- #roman reconquest events
- hre_roman_reconquest_events.1.t: "Reconquest"
- hre_roman_reconquest_events.1.d: "Begin the reconquest of the territory of the Wester Roman Empire."
- hre_roman_reconquest_events.1.f: "Begin the reconquest of the territory of the Wester Roman Empire."
- hre_roman_reconquest_events.1.a: "Begin the reconquest of the territory of the Wester Roman Empire."
+ hre_national_identity_events.4.t: "Embracing Our French Heritage"
+ hre_national_identity_events.4.d: "In recognizing the profound influence of French culture and history, we have chosen to adopt our French identity as the cornerstone of our nation’s future."
+ hre_national_identity_events.4.f: "We have embraced our French heritage, acknowledging its central role in shaping who we are today."
+ hre_national_identity_events.4.a: "A powerful commitment to our French roots and legacy."
 
- hre_roman_reconquest_events.2.t: "The West reconquered."
- hre_roman_reconquest_events.2.d: "We reconquered the Western Roman Empire."
- hre_roman_reconquest_events.2.f: "We reconquered the Western Roman Empire."
- hre_roman_reconquest_events.2.a: "Victory"
- 
- hre_roman_reconquest_events.3.t: "We reconquered North Italy."
- hre_roman_reconquest_events.3.d: "We reconquered North Italy."
- hre_roman_reconquest_events.3.f: "We have reconquered the heartland of the Roman Empire."
- hre_roman_reconquest_events.3.a: "Victory"
+ hre_roman_reconquest_events.1.t: "The Reconquest Begins"
+ hre_roman_reconquest_events.1.d: "The time has come to restore the lands once held by the mighty Western Roman Empire. Our banners will fly over the territories lost to time and strife, as we march to reclaim what was once ours."
+ hre_roman_reconquest_events.1.f: "The march of history begins today. We take the first step in reclaiming the glory of the Western Roman Empire."
+ hre_roman_reconquest_events.1.a: "The first step towards the return of Roman greatness."
 
- hre_roman_reconquest_events.5.t: "We reconquered Southern Italy."
- hre_roman_reconquest_events.5.d: "We reconquered Southern Italy."
- hre_roman_reconquest_events.5.f: "We have reconquered the heartland of the Roman Empire."
- hre_roman_reconquest_events.5.a: "Victory"
+ hre_roman_reconquest_events.2.t: "The West Restored"
+ hre_roman_reconquest_events.2.d: "The territories of the Western Roman Empire are once again under our control. The glory of Rome has been restored, and the foundations of a new era are laid."
+ hre_roman_reconquest_events.2.f: "The heart of the Empire beats once more as we reclaim the West. The legions march victorious."
+ hre_roman_reconquest_events.2.a: "The Western Roman Empire is ours again. Glory to Rome!"
 
- hre_roman_reconquest_events.6.t: "We reconquered Iberia."
- hre_roman_reconquest_events.6.d: "We reconquered Iberia."
- hre_roman_reconquest_events.6.f: "We reconquered Iberia."
- hre_roman_reconquest_events.6.a: "Victory"
+ hre_roman_reconquest_events.3.t: "North Italy Reclaimed"
+ hre_roman_reconquest_events.3.d: "The lands of North Italy, once the very core of the Roman Empire, are now ours again. The mighty city of Rome shall now look north with pride as it reunites with its heartland."
+ hre_roman_reconquest_events.3.f: "We have brought North Italy back into the fold, restoring Rome's ancient glory to its rightful place."
+ hre_roman_reconquest_events.3.a: "Victory for the heart of the Empire."
 
- hre_roman_reconquest_events.7.t: "We reconquered North Africa."
- hre_roman_reconquest_events.7.d: "We reconquered North Africa."
- hre_roman_reconquest_events.7.f: "We reconquered North Africa."
- hre_roman_reconquest_events.7.a: "Victory"
+ hre_roman_reconquest_events.5.t: "Southern Italy Restored"
+ hre_roman_reconquest_events.5.d: "The land where Rome's greatness began is once again under our rule. From the hills of Campania to the shores of Sicily, Southern Italy is reborn in the shadow of Rome’s greatness."
+ hre_roman_reconquest_events.5.f: "Southern Italy, the cradle of Roman civilization, has returned to us. The triumph of our ancestors echoes through the streets."
+ hre_roman_reconquest_events.5.a: "The soul of Rome is restored in the south."
 
- hre_roman_reconquest_events.8.t: "We reconquered Britannia."
- hre_roman_reconquest_events.8.d: "We reconquered Britannia."
- hre_roman_reconquest_events.8.f: "We reconquered Britannia."
- hre_roman_reconquest_events.8.a: "Victory"
+ hre_roman_reconquest_events.6.t: "Iberia Reclaimed"
+ hre_roman_reconquest_events.6.d: "The Iberian Peninsula, once a stronghold of Roman power, now returns to the Empire. From the mountains of Asturias to the shores of Andalusia, Iberia is once again part of the Roman family."
+ hre_roman_reconquest_events.6.f: "The Iberian Peninsula is ours once more, a vital piece of our imperial legacy returned to its rightful place."
+ hre_roman_reconquest_events.6.a: "Victory in Iberia. The Empire's reach expands."
 
- hre_roman_reconquest_events.9.t: "We reconquered Caledonia." #Scotland
- hre_roman_reconquest_events.9.d: "We reconquered Caledonia."
- hre_roman_reconquest_events.9.f: "We reconquered Caledonia."
- hre_roman_reconquest_events.9.a: "Victory"
+ hre_roman_reconquest_events.7.t: "North Africa Restored"
+ hre_roman_reconquest_events.7.d: "North Africa, the breadbasket of the Roman world, has returned to our grasp. From the shores of Carthage to the sands of Egypt, the land that once sustained the Empire now thrives under our rule once again."
+ hre_roman_reconquest_events.7.f: "The African provinces are ours again, securing the wealth and resources that once fueled the Empire’s might."
+ hre_roman_reconquest_events.7.a: "Victory in Africa! The Empire is complete."
 
- hre_roman_reconquest_events.10.t: "We reconquered Hibernia." #Ireland
- hre_roman_reconquest_events.10.d: "We reconquered Hibernia."
- hre_roman_reconquest_events.10.f: "We reconquered Hibernia."
- hre_roman_reconquest_events.10.a: "Victory"
+ hre_roman_reconquest_events.8.t: "Britannia Reclaimed"
+ hre_roman_reconquest_events.8.d: "The distant shores of Britannia, long lost to the Empire, are now ours once more. The winds of Rome will once again carry its banners across the British Isles."
+ hre_roman_reconquest_events.8.f: "Britannia has returned to the Empire, its cities and provinces once again under the protection of Rome."
+ hre_roman_reconquest_events.8.a: "Victory in Britannia! Rome’s influence reaches the furthest corners of the world."
+
+ hre_roman_reconquest_events.9.t: "Caledonia Reclaimed"
+ hre_roman_reconquest_events.9.d: "The rugged land of Caledonia, once defied Roman rule, is now under our control. With the reconquest of this land, we demonstrate the might of Rome even in the harshest of climates."
+ hre_roman_reconquest_events.9.f: "Caledonia, untamed and wild, is now subdued and once again part of the Roman domain."
+ hre_roman_reconquest_events.9.a: "Victory in Caledonia. The Roman frontier stretches further."
+
+ hre_roman_reconquest_events.10.t: "Hibernia Restored"
+ hre_roman_reconquest_events.10.d: "The windswept isle of Hibernia, long lost to the tides of time, is now firmly within our grasp. The power of Rome stretches to the westernmost reaches of the Empire."
+ hre_roman_reconquest_events.10.f: "Hibernia is ours again, and with it, Rome’s power reaches across the vast seas of the west."
+ hre_roman_reconquest_events.10.a: "Victory in Hibernia! Rome’s glory is eternal."
 
  #FLA
  #request lowlands state events
