--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -360,11 +360,12 @@
  combat_unit_type_screw_frigate: "Screw Frigate"
  combat_unit_type_carrack: "Carrack"
 
- #Laws
+ # Laws
  law_tribal_armies: "Tribal Society"
- law_tribal_armies_desc: "A militaristic tribal society is a type of social organization characterized by a strong emphasis on military power and warfare. In such societies, warfare often plays a central role in both culture and economy."
+ law_tribal_armies_desc: "A militaristic tribal society is organized around kinship, loyalty, and the pursuit of martial glory. Warfare is not merely a necessity but a way of life, with military prowess shaping social status, economy, and governance alike."
  law_mixed_army: "Mixed Military"
- law_mixed_army_desc: "Professional Core backed up my a large reserve of feudal levies."
+ law_mixed_army_desc: "A standing core of professional soldiers forms the heart of the army, bolstered in times of need by vast levies drawn from the feudal estates. This model blends discipline with sheer numbers, balancing quality and quantity."
+
 
  dyn_c_re: "Roman Empire"
  dyn_c_ere: "Eastern Roman Empire"
