Power Bloc principle loc adjusted.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -411,22 +411,24 @@
  #identity_br_holy_roman_empire: "Holy Roman Empire"
  #identity_br_holy_roman_empire_desc: "The Holy Roman Empire."
 
+# Principles - Improved
+
  br_principle_group_autonomous_government: "Autonomous Subjects"
- br_principle_group_autonomous_government_desc: "Central government grants more autonomy on economic and defence matters to local governments; reducing administrative burdens."
+ br_principle_group_autonomous_government_desc: "The central government delegates greater authority over economic and military affairs to local administrations, easing the strain on the state while fostering regional initiative and self-reliance."
  br_principle_autonomous_government_1_desc: "$br_principle_group_autonomous_government_desc$"
  br_principle_autonomous_government_2_desc: "$br_principle_group_autonomous_government_desc$"
  br_principle_autonomous_government_3_desc: "$br_principle_group_autonomous_government_desc$"
 
  principle_group_economic_imperialism: "Economic Imperialism"
  br_principle_economic_imperialism: "Economic Imperialism"
- br_principle_economic_imperialism_desc: "Economic Imperialism."
+ br_principle_economic_imperialism_desc: "The expansion of political influence through economic dominance, where wealth and trade networks are wielded as instruments of power more decisive than armies."
  br_principle_economic_imperialism_1_desc: "$br_principle_economic_imperialism_desc$"
  br_principle_economic_imperialism_2_desc: "$br_principle_economic_imperialism_desc$"
  br_principle_economic_imperialism_3_desc: "$br_principle_economic_imperialism_desc$"
 
  principle_group_holy_roman_elite: "Imperial Elite"
  br_principle_holy_roman_elite: "Imperial Elite"
- br_principle_holy_roman_elite_desc: "Imperial Elite."
+ br_principle_holy_roman_elite_desc: "A privileged aristocratic class entrusted with the stewardship of the realm, blending martial tradition with political authority to uphold the grandeur and stability of imperial rule."
  br_principle_holy_roman_elite_1_desc: "$br_principle_holy_roman_elite_desc$"
  br_principle_holy_roman_elite_2_desc: "$br_principle_holy_roman_elite_desc$"
  br_principle_holy_roman_elite_3_desc: "$br_principle_holy_roman_elite_desc$"
