Added new modifiers for the revolution JE

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -21,3 +21,7 @@
  hre_revolution_events.5.d: "Food insecurity"
  hre_revolution_events.5.f: "Food insecurity"
  hre_revolution_events.5.a: "This isn't good"
+
+ ##Modifiers
+ br_modifier_unreliable_food_security: "Unreliable Food Security"
+ br_modifier_unpopular_regime: "Unpopular Regime"
